--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
       }
    },
    "author": {
-      "email": "pronghorn-notifications-publishers@google.com"
+      "email": "Alex313031@gmail.com"
    },
    "default_locale": "en",
    "icons": {
